--- a/styles.css
+++ b/styles.css
@@ -109,9 +109,9 @@ h1.titleMask span {
 
 .downArrow {
     position: absolute;
-    bottom: 10px;
+    bottom: 0;
     width: 100%;
-    height: 75px;
+    height: 50px;
     z-index: 5;
 
     display: grid;
@@ -196,18 +196,19 @@ iframe {
 @media only screen and (max-width: 600px) {
     .fancy {
         font-size: 1.2em;
+        padding: 0
     }
     h1 {
-        font-size: 2em;
+        font-size: 2.5em;
     }
 
     .buttons {
         grid-auto-flow: row;
-        padding-top: 8vh;
+        padding-top: 5vh;
     }
 
     .nameplate {
-        padding-top: 10vh;
+        padding-top: 5vh;
     }
 }
 
